# sentinel

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  codex sentinel review.md  deny.toml  finding-2-mcp-shell-bypass.md  glass-break-spec.md  requirements.txt  rules.yaml.example  rust-toolchain.toml  rustfmt.toml  sentinel.py
crates/sentinel-application/: Cargo.toml
crates/sentinel-application/src/: appraisal_store.rs  auditor.rs  autocron_config.rs  ba_orchestrator.rs  cache_efficiency.rs  capability_router.rs  change_failure.rs  channel_events.rs  classifier.rs  constitution_gate_runtime.rs  cost_per_point.rs  cycle_time.rs  cycle_time_analytics.rs  cycle_time_prediction.rs  dedupe.rs  delegation_service.rs  deploy_freq.rs  dev_scorecard.rs  engine.rs  eval_run.rs  evidence_adapters.rs  gate.rs  hook_metrics.rs  interceptor.rs  issue_suggest.rs  judge_enforcement.rs  judge_service.rs  lead_time.rs  legatus_client.rs  lib.rs  linear_code_audit.rs  linear_health_score.rs  linear_pm_audit.rs  master_dashboard.rs  mcp_guardian.rs  mcp_handler.rs  memory_telemetry.rs  ntfy_push.rs  operational_summary.rs  paths.rs  (+20 more)
crates/sentinel-application/src/hooks/: account_cascade.rs  activity_tracker.rs  agent_revocation.rs  ask_question_resync_nudge.rs  audit_extract.rs  autocron.rs  block_context.rs  bug_task_gate.rs  build_auto_monitor.rs  build_notify.rs  catastrophic_escalation.rs  claim_reality_check.rs  commit_hygiene.rs  commit_message_validator.rs  constitution_gate.rs  consul_inbox.rs  context_monitor.rs  cwd_changed.rs  db_ops_gate.rs  dep_check.rs  doc_cleanup.rs  doc_drift.rs  doppler_auth0_gate.rs  dry_run_then_commit.rs  error_reporter.rs  evidence_collector.rs  execution_log.rs  git_hygiene.rs  glass_break_gate.rs  good_citizen_observer.rs  hygiene_override.rs  hygiene_reminders.rs  linear_inbound_sync.rs  linear_lifecycle.rs  linear_pm_gate.rs  mcp_health.rs  memory_extract.rs  memory_feedback.rs  memory_inject.rs  memory_provision.rs  (+60 more)
crates/sentinel-application/src/telemetry/: checkpoint.rs  lake.rs  ledger.rs  mod.rs  report.rs  ship.rs  (+3 more)
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: ba_cmd.rs  ba_draft_graph.rs  break_cmd.rs  browser_test_cmd.rs  cache_cmd.rs  cache_efficiency_graph.rs  claude_md_cmd.rs  cleanup_cmd.rs  code_reconciliation_audit.rs  compress_cmd.rs  config_cmd.rs  cost_per_point_cmd.rs  cost_per_point_graph.rs  daemon_cmd.rs  deploy_freq_cmd.rs  deploy_freq_graph.rs  dev_scorecard_cmd.rs  dev_scorecard_graph.rs  eval_cmd.rs  eval_graph.rs  federation_cmd.rs  hook_cmd.rs  init_cmd.rs  launcher.rs  legatus_cmd.rs  linear_audit_cmd.rs  linear_code_audit_cmd.rs  linear_health_cmd.rs  linear_health_graph.rs  main.rs  manifest_cmd.rs  mcp_cmd.rs  phase_graph_projection.rs  pm_audit_graph.rs  policy_cmd.rs  pr_review_cmd.rs  pr_review_graph.rs  project_cmd.rs  resign_cmd.rs  roi_cmd.rs  (+17 more)
crates/sentinel-cli/templates/: slas.example.toml
crates/sentinel-cli/tests/: claude_md_count_drift.rs  e2e_hooks.rs  e2e_judge_integration.rs  enterprise_langgraph_features.rs  hook_registration_completeness.rs
crates/sentinel-domain/: Cargo.toml
crates/sentinel-domain/src/: agent_routing.rs  capability.rs  commit.rs  config.rs  constants.rs  dependency.rs  disagreement.rs  dry_run.rs  error_classifier.rs  events.rs  evidence.rs  evidence_adapter.rs  exchange.rs  file_kind.rs  hooks.rs  interceptor.rs  judge.rs  langgraph_thread.rs  lib.rs  mcp_tool.rs  multi_judge.rs  output_compress.rs  override_phrase.rs  path_safety.rs  paths.rs  port_errors.rs  ports.rs  pricing.rs  project.rs  proof.rs  repo_kind.rs  request_limits.rs  reversibility.rs  review.rs  routing.rs  session.rs  spec_challenge.rs  ssrf.rs  state.rs  step_manifest.rs  (+6 more)
crates/sentinel-git-interceptor/: Cargo.toml
crates/sentinel-git-interceptor/src/: main.rs
crates/sentinel-graph/: Cargo.toml
crates/sentinel-graph/src/: error.rs  lib.rs  tests.rs
crates/sentinel-infrastructure/: Cargo.toml
crates/sentinel-infrastructure/src/: activity_log.rs  agent_revocation_graph.rs  anthropic.rs  appraisal_store.rs  ba_config.rs  ba_draft_graph.rs  ba_provenance_graph.rs  ba_requirements_graph.rs  batch_audit_graph.rs  bug_task_graph.rs  cache_efficiency_graph.rs  capability_route_graph.rs  capability_router.rs  commit_message_graph.rs  config.rs  cost_per_point_graph.rs  db_ops_graph.rs  decision_graph_introspection.rs  decision_graph_store.rs  delegation_graph.rs  deploy_freq_graph.rs  dev_scorecard_graph.rs  doppler_auth0_graph.rs  dry_run_auditor.rs  dry_run_graph.rs  enforcement_graph.rs  env.rs  error_log.rs  eval_corpus.rs  eval_graph.rs  eval_run_store.rs  eval_scorer.rs  evidence_browserbase.rs  evidence_filesystem.rs  filesystem.rs  git.rs  git_hygiene_graph.rs  interceptor.rs  ipc.rs  lib.rs  (+62 more)
crates/sentinel-infrastructure/tests/: enterprise_langgraph_decision_graphs.rs  enterprise_repository_boundaries.rs  live_codex_schema.rs  live_judge_pressure.rs
crates/sentinel-legatus/: Cargo.toml
crates/sentinel-legatus/src/: approval_cache.rs  client.rs  connection_event_log.rs  connection_status.rs  error.rs  handle.rs  lib.rs  persistent_inbox.rs  persistent_outbox.rs  spent_nonce_log.rs  witness_verifier.rs
crates/sentinel-legatus/tests/: round_trip_consulate.rs
crates/sentinel-mcp/: Cargo.toml
crates/sentinel-mcp/src/: main.rs
crates/sentinel-npx-interceptor/: Cargo.toml
crates/sentinel-npx-interceptor/src/: main.rs
tools/sentinel-bridge/: Cargo.toml
tools/sentinel-bridge/src/: ingest.rs  jsonl.rs  main.rs  store.rs
tools/sentinel-viz-api/: Cargo.toml  README.md  SEPARATION.md
tools/sentinel-viz-api/scripts/: tag-audit.sh
tools/sentinel-viz-api/src/: activity.rs  awaiting.rs  db.rs  graph.rs  health.rs  ingest.rs  kpis.rs  lib.rs  llm.rs  main.rs  model.rs  naming.rs  rollup_summary.rs  server.rs  sse.rs  summary.rs  transcript.rs
tools/sentinel-viz-api/tests/: activity_fixture.rs  db_read.rs  graph_fixture.rs  ingest_roundtrip.rs  seam_invariants.rs
(+952 files in other folders)
