[workspace]
resolver = "2"
members = [
    "crates/sentinel-domain",
    "crates/sentinel-application",
    "crates/sentinel-infrastructure",
    "crates/sentinel-cli",
    "crates/sentinel-git-interceptor",
    "crates/sentinel-npx-interceptor",
    "crates/sentinel-legatus",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Gary Somerhalder"]
license = "MIT"
repository = "https://github.com/garysomerhalder/sentinel"
rust-version = "1.83"

[workspace.dependencies]
# Internal crates
sentinel-domain = { path = "crates/sentinel-domain" }
sentinel-application = { path = "crates/sentinel-application" }
sentinel-infrastructure = { path = "crates/sentinel-infrastructure" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# WebSocket client — used by sentinel-legatus to connect to a
# consulate via the Consular Protocol (path-dep on the sibling
# repo legatus-consul-agent). 0.24 matches the version pinned
# in legatus-consul-agent's workspace.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
# Ed25519 signing for opt-in StepProof signatures (M1.7).
# rand_core 0.6 matches ed25519-dalek 2.x's expected RNG API.
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"

# HTTP client (Anthropic API + the sync legatus_client that hooks
# use to POST escalations to the local sentinel daemon).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking", "http2", "charset", "macos-system-configuration"] }

# LLM framework (adversarial Codex judge + Opus skill router)
rig-core = { version = "0.35", package = "rig-core" }

# HTTP server (dashboard API)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
dirs = "6"
regex = "1"
petgraph = "0.6"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
colored = "3"
glob = "0.3"
fs2 = "0.4"
getrandom = "0.2"

# Path deps on the sister repo legatus-consul-agent (used by
# sentinel-legatus only). Sentinel and legatus-consul-agent live
# side-by-side in ~/firefly/gitrepos/ on dev machines; if the
# layout ever changes, only these two paths need to update.
consul-protocol = { path = "../legatus-consul-agent/crates/consul-protocol" }
consul-domain = { path = "../legatus-consul-agent/crates/consul-domain" }

# Dev
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
