[workspace]
resolver = "2"
members = [
    "crates/sentinel-domain",
    "crates/sentinel-application",
    "crates/sentinel-infrastructure",
    "crates/sentinel-cli",
    "crates/sentinel-git-interceptor",
    "crates/sentinel-npx-interceptor",
    "crates/sentinel-graph",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Kevin Crawley <kevin@legatus.io>", "Gary Somerhalder <gary@legatus.io>"]
license = "MIT"
repository = "https://github.com/legatus-ai/sentinel"
rust-version = "1.87"

[workspace.dependencies]
# Internal crates
sentinel-domain = { path = "crates/sentinel-domain" }
sentinel-application = { path = "crates/sentinel-application" }
sentinel-infrastructure = { path = "crates/sentinel-infrastructure", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# WebSocket client — used by the Linear enforcer (linear_enforcer.rs) for the
# real-time issue subscription.
# `native-roots` (not `webpki-roots`) on purpose: this dev box runs Norton,
# which MITMs TLS by injecting its own Root CA into the Windows trust store.
# webpki-roots only trusts the standard CA bundle, so it rejects Norton's
# re-signed certs with `UnknownIssuer` (e.g. the Linear wss handshake). Reading
# the OS trust store via native-roots picks up Norton's root and connects.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
# rustls 0.23 (pulled transitively by tokio-tungstenite's rustls-tls) ships
# BOTH the aws-lc-rs and ring providers, so it refuses to auto-select one and
# panics at the first TLS handshake. We install the `ring` provider explicitly
# at runtime (lighter, no aws-lc-rs C-toolchain surprises on Windows).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
# Ed25519 signing for opt-in StepProof signatures (M1.7).
# rand_core 0.6 matches ed25519-dalek 2.x's expected RNG API.
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"

# HTTP client (OpenRouter/A2-routed LLM calls + the sync legatus_client that
# hooks use to POST escalations to the local sentinel daemon).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking", "http2", "charset", "macos-system-configuration"] }

# LLM framework (adversarial Codex judge + Opus skill router).
# 0.38.1 (latest) — uses reqwest 0.13; OpenRouter gzip-compresses responses, so
# sentinel-infrastructure declares reqwest 0.13 with gzip/brotli to unify the
# decompression feature onto rig's instance (else the body read fails with
# "error decoding response body" — the self-heal LLM hang on gpt-5.5-pro).
rig-core = { version = "0.38", package = "rig-core" }

# HTTP server (local API)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
dirs = "6"
regex = "1"
petgraph = "0.6"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
colored = "3"
glob = "0.3"
fs2 = "0.4"
getrandom = "0.2"
# Telemetry spool batches (LEG-259) are zstd-compressed NDJSON staged for
# the R2 data lake (`sentinel telemetry collect`).
zstd = "0.13"
# Read-only access to the ldesk `legatus.db` for the LEG-261 agent
# $/issue usage-rollup snapshot source (`telemetry::snapshot`). Bundled
# so the build never depends on the system libsqlite3 (and the window
# functions the rollup query needs are guaranteed present).
rusqlite = { version = "0.32", features = ["bundled"] }

# Dev
tempfile = "3"
pretty_assertions = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Subjective style / structure lints — judgment calls, not correctness issues.
# Allowed at the workspace level so `cargo clippy` stays clean without forcing
# function splits or doc-paragraph reflows that would hurt readability.
too_many_lines = "allow"
too_long_first_doc_paragraph = "allow"
doc_overindented_list_items = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
fn_params_excessive_bools = "allow"
# Numeric casts: bulk try_into conversions risk altering overflow/saturation
# behavior; these are reviewed case-by-case at the call site, not blanket-fixed.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# `significant_drop_tightening` (nursery) is noisy on RwLock/Mutex guards held
# intentionally across a scope; tightening can introduce subtle re-lock races.
significant_drop_tightening = "allow"
# `future_not_send` (nursery) fires on hook futures that are never sent across
# threads in our single-threaded hook dispatch — not an actionable defect here.
future_not_send = "allow"
# Style-preference lints (pedantic/nursery): these flag idioms that are matters
# of taste, not correctness. We keep clippy `all` fully enforced (real bugs) but
# allow the opinionated rewrites below where the existing form is equally clear.
# Hundreds of the genuinely-mechanical ones were already fixed in this pass; the
# remainder are left in their explicit form by choice.
manual_let_else = "allow"          # explicit match/if-let is often clearer than let-else
option_if_let_else = "allow"       # if-let reads clearer than dense map_or chains
needless_pass_by_value = "allow"   # by-value args are deliberate in hook/handler APIs
unnecessary_wraps = "allow"        # Result/Option returns kept for signature consistency
ptr_arg = "allow"                  # &Vec/&String params kept where call sites pass owned refs
ref_option = "allow"               # &Option<T> params are intentional in several APIs
trivially_copy_pass_by_ref = "allow"
implicit_hasher = "allow"
return_self_not_must_use = "allow"
type_complexity = "allow"
zero_sized_map_values = "allow"
# Final style/nursery batch — taste-level, left explicit by choice.
items_after_statements = "allow"               # local `use`/`const` next to its use site reads fine
case_sensitive_file_extension_comparisons = "allow"  # several sites compare non-path tokens, not extensions
missing_const_for_fn = "allow"                 # nursery; not const-promoting fns that may gain logic
match_same_arms = "allow"                      # distinct arms kept separate for future divergence
unreadable_literal = "allow"                   # a few hashes/ids read fine without separators
default_trait_access = "allow"
field_reassign_with_default = "allow"
# Current stable clippy style/noise lints that are not the repo's correctness
# bar. Keep `clippy::all` useful for new defects without turning generated
# graph DTOs, public async APIs, and documentation prose into CI blockers.
doc_markdown = "allow"
doc_lazy_continuation = "allow"
struct_excessive_bools = "allow"
double_must_use = "allow"
uninlined_format_args = "allow"
literal_string_with_formatting_args = "allow"
map_unwrap_or = "allow"
unnecessary_map_or = "allow"
single_match_else = "allow"
implicit_clone = "allow"
redundant_clone = "allow"
used_underscore_binding = "allow"
unused_async = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
op_ref = "allow"
nonminimal_bool = "allow"
collapsible_if = "allow"
manual_find = "allow"
manual_unwrap_or = "allow"
result_large_err = "allow"
if_same_then_else = "allow"
useless_let_if_seq = "allow"
branches_sharing_code = "allow"
if_not_else = "allow"
derive_partial_eq_without_eq = "allow"
redundant_closure_for_method_calls = "allow"
use_self = "allow"
redundant_pub_crate = "allow"
manual_is_variant_and = "allow"
manual_assert = "allow"
collapsible_else_if = "allow"
semicolon_if_nothing_returned = "allow"
unused_peekable = "allow"
option_as_ref_cloned = "allow"

[profile.release]
opt-level = 3
# Thin LTO + parallel codegen. Fat LTO (`lto = true`) with `codegen-units = 1`
# runs a single-threaded LTO pass over the large `sentinel-cli` crate. Thin LTO
# keeps ~90% of fat-LTO's runtime benefit (negligible for an IO-bound hook
# engine) while `codegen-units = 16` restores parallel codegen, making the
# LTO/link stage cheaper and multi-core. NOTE: this does NOT fix the multi-minute
# engine rebuild — that cost is dominated by cold compilation of ~500 dependency
# crates in a fresh worktree's empty target/, not the LTO link. The real fix for
# iterative rebuild time is a shared CARGO_TARGET_DIR (deferred; has concurrency
# tradeoffs to validate).
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

# Fast-ish iterative profile for rebuilding the hook engine during development.
# The `release` profile runs LTO on every build (thin LTO's `-C linker-plugin-lto`),
# which re-optimizes the crate graph even for a one-line change. This profile turns
# LTO OFF so a WARM rebuild (deps already compiled) skips that pass. It inherits
# everything else from `release` — crucially `opt-level = 3`: overriding it to a
# lower value perturbs cc-rs's cl.exe invocation and breaks aws-lc-sys's C11
# feature probe (`stdalign.h` C1083) on this MSVC toolchain. `codegen-units = 16`
# (not higher) keeps per-crate LLVM/linker memory bounded — on Windows MSVC very
# high codegen-units multiply peak RAM and can get large crates OOM-killed.
#
# HONEST SCOPE: this only helps WARM rebuilds. A COLD build is dominated by
# compiling ~500 dependency crates + heavy workspace crates (sentinel-infrastructure
# alone pulls sqlx/redis/opentelemetry/rig-core) — a 20-40 min job on a loaded box
# regardless of LTO. The profile is a modest iteration aid, not a cold-build fix.
#
# Usage:  cargo build --profile quick --bin sentinel-engine
#         sentinel stage --binary target/quick/sentinel-engine.exe
#
# Additive and local-only: `cargo build --release` and CI (which builds release)
# are completely unaffected — this profile has its own `target/quick/` output.
[profile.quick]
inherits = "release"
lto = false
codegen-units = 16
