[package]
name = "sentinel-application"
description = "Use cases and orchestration — hook engine, proof engine, AI judges, MCP handler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sentinel-domain = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
zstd = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# In-process fake S3 endpoint for the telemetry ship tests (LEG-260) —
# proves idempotent re-ship / retry-on-5xx / delete-after-confirm at the
# wire level without a real bucket.
axum = { workspace = true }

[lints]
workspace = true
