[package]
name = "sentinel"
description = "Proof-of-work hook engine + MCP server for Claude Code Marketplace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
sentinel-domain = { workspace = true }
sentinel-application = { workspace = true }
sentinel-infrastructure = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
