[package]
name = "sentinel"
description = "Proof-of-work hook engine + MCP server for Claude Code Marketplace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sentinel-engine"
path = "src/main.rs"

[[bin]]
name = "sentinel"
path = "src/launcher.rs"

[dependencies]
sentinel-domain = { workspace = true }
sentinel-application = { workspace = true }
sentinel-infrastructure = { workspace = true }
sentinel-legatus = { path = "../sentinel-legatus" }
sentinel-graph = { path = "../sentinel-graph" }
uuid = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }


[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }

[lints]
workspace = true
