[package]
name = "sentinel-domain"
description = "Pure business logic for Sentinel — proof chains, workflows, evidence, routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
petgraph = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
# Republic-of-Agents identity types (RoleBinding etc.) per Fabrica ADR-003.
# Pure value-type import; no I/O surface introduced — sentinel-domain's
# I/O-purity claim (per workspace CLAUDE.md "Domain purity" rule) is
# preserved because consul-domain itself is also pure-domain.
consul-domain = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
