[package]
name = "sentinel-git-interceptor"
version = "0.1.0"
edition = "2021"
description = "Git safety interceptor — blocks dangerous commands, offers safe alternatives"

[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
sentinel-domain = { path = "../sentinel-domain" }
sentinel-application = { path = "../sentinel-application" }
sentinel-infrastructure = { path = "../sentinel-infrastructure", default-features = false }

[lints.rust]
# Binary crate needs unsafe for TTY detection FFI — override workspace forbid
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
