[package]
name = "sentinel-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase-progression engine for sentinel skills, powered by langgraph-core (LangGraph Rust port). Compiles workflows.toml into a durable, checkpointed StateGraph with judge-verdict interrupts and conditional Pass/Fail routing."

[dependencies]
# The LangGraph Rust port — path dep on the sibling repo, matching the
# convention used for legatus-consul-agent path deps in the workspace root.
# `sqlite` feature gives us the durable cross-process checkpointer; the graph
# advances one phase per async MCP call and checkpoints between invocations.
langgraph-core = { path = "../../../langgraph-python-to-rust/langgraph-core", default-features = false, features = ["sqlite"] }

sentinel-domain = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
