[package]
name = "sentinel-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase-progression engine for sentinel skills, powered by langgraph-core (LangGraph Rust port). Compiles workflows.toml into a durable, checkpointed StateGraph with judge-verdict interrupts and conditional Pass/Fail routing."

[features]
default = ["sqlite"]
sqlite = ["langgraph-core/sqlite"]
postgres = ["langgraph-core/postgres"]

[dependencies]
# The LangGraph Rust port — path dep on the sibling repo.
# `sqlite` is the local durable default; enabling sentinel-graph's `postgres`
# feature lets production select LangGraph's Postgres checkpointer.
langgraph-core = { path = "../../../langgraph-python-to-rust/langgraph-core", default-features = false }

sentinel-domain = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
