[package]
name = "sentinel-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase-progression engine for sentinel skills, powered by langgraph-core (LangGraph Rust port). Compiles workflows.toml into a durable, checkpointed StateGraph with judge-verdict interrupts and conditional Pass/Fail routing."

[features]
# Build all durable checkpoint backends by default. Runtime backend selection
# still comes from SENTINEL_PHASE_GRAPH_CHECKPOINTER and remains fail-closed.
default = ["sqlite", "postgres", "redis"]
sqlite = ["langgraph-core/sqlite"]
postgres = ["langgraph-core/postgres"]
redis = ["langgraph-core/redis-checkpoint"]

[dependencies]
# The LangGraph Rust port — path dep on the sibling repo.
# `sqlite` is the local durable default; `postgres` and `redis` let production
# select distributed LangGraph checkpointers without rebuilding.
langgraph-core = { path = "../../../langgraph-python-to-rust/langgraph-core", default-features = false }

sentinel-domain = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
