[package]
name = "sentinel-infrastructure"
description = "IO adapters — stdin, git, OpenRouter LLM, crypto, state store, MCP transport, IPC"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Build all durable LangGraph checkpoint backends by default. Runtime backend
# selection still comes from SENTINEL_DECISION_GRAPH_CHECKPOINTER and remains
# fail-closed.
default = ["sqlite", "postgres", "redis"]
sqlite = ["langgraph-core/sqlite"]
postgres = ["langgraph-core/postgres"]
redis = ["langgraph-core/redis-checkpoint"]

[dependencies]
sentinel-domain = { workspace = true }
sentinel-application = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
# LangGraph Rust port — powers the Tier B enforcement escalation graph
# (enforcement_graph.rs): a checkpointed StateGraph encoding the
# classify→judge→act decision with a durable, replayable audit trail.
langgraph-core = { path = "../../../langgraph-python-to-rust/langgraph-core", default-features = false }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# LLM calls go through the house `llm_http::ChatClient` over this single
# workspace reqwest (0.12, ring TLS, gzip). OpenRouter gzip-compresses
# responses (Content-Encoding: gzip); the workspace reqwest's `gzip` feature
# makes decoding automatic — without it the body read fails with "error
# decoding response body" (the old self-heal hang on gpt-5.5-pro). This
# replaces the former rig-core dependency and its separate reqwest 0.13 stack.
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
chacha20poly1305 = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
fs2 = { workspace = true }
getrandom = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
