[package]
name = "sentinel-npx-interceptor"
version = "0.1.0"
edition = "2021"
description = "Npx interceptor — redirects Node package commands to local Rust CLI equivalents"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "npx"
path = "src/main.rs"

[dependencies]
sentinel-domain = { path = "../sentinel-domain" }
sentinel-application = { path = "../sentinel-application" }
sentinel-infrastructure = { path = "../sentinel-infrastructure", default-features = false }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
