[workspace]

[package]
name = "sentinel-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Rust port of sentinel_bridge.py — tails hook-invocations JSONLs from Claude Code + harness shims (codex / opencode / qwen / gemini) and persists into the activegraph-compatible SQLite store the viz dashboard reads."

[[bin]]
name = "sentinel-bridge"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde", "clock"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
glob = "0.3"
